# SOM

./: CMakeLists.txt  README.md  constants.h  constants.txt  deviation.c  deviation.h  functions.c  functions.h  main.c  main.h  montecarlo.c  montecarlo.h  realGreen.txt  result.txt  setConfiguration.c  setConfiguration.h  tau.txt  updates.c  updates.h
Debug/: SOM  constants.txt  constants.txt~  deviation.d  functions.d  kernel.txt  main.d  makefile  montecarlo.d  objects.mk  realGreen.txt  result.txt  setConfiguration.d  subdir.mk  tau.txt  updates.d
